# hi_ex

./: CMakeLists.txt  main.cpp
biology/include/: ConstVal.h
biology/src/: AI.cpp  AI.h  AlpheBeta.cpp  AlpheBeta.h  Board.cpp  Board.h  Chess.cpp  Chess.h  Display.cpp  Display.h  Evaluate.cpp  Evaluate.h  Game.cpp  Game.h  Human.cpp  Human.h  Judge.cpp  Judge.h  Player.cpp  Player.h
